manifests-successful/codetogether-1.4.11.tgz-manifest.yaml
---
# Source: codetogether/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-codetogether
  labels:
    helm.sh/chart: codetogether-1.4.11
    app.kubernetes.io/name: codetogether
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2023.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: codetogether
    app.kubernetes.io/instance: my-release
---
# Source: codetogether/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-codetogether
  labels:
    helm.sh/chart: codetogether-1.4.11
    app.kubernetes.io/name: codetogether
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2023.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: codetogether
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/coturn: dd4e44f88838df1beed31ecaf3a7d2451a46a0b19ce7d3c083c096b3c3ee0b89
        checksum/dashboard: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/license: ceac3dfc8018b27231a7445e4dcabf57306ef8a8018a5fd66541550fa8664300
        checksum/sso: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/ssl: 6eeed3c2971aeb4a1f335475e751be366c040b9da65c73bade3ef59ed82c6966
      labels:
        app.kubernetes.io/name: codetogether
        app.kubernetes.io/instance: my-release
    spec:
      serviceAccountName: codetogether
      containers:
        - name: codetogether
          securityContext:
            {}
          image: "codetogether/codetogether:latest"
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 1080
              protocol: TCP
          
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 1
            httpGet:
              path: /ct-health/
              port: http
          
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 15
            successThreshold: 1
            failureThreshold: 1
            httpGet:
              path: /ct-health/
              port: http

          resources:
            null
---
# Source: codetogether/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-codetogether
  labels:
    helm.sh/chart: codetogether-1.4.11
    app.kubernetes.io/name: codetogether
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2023.1.0"
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
    - hosts:
        - "codetogether.local"
      secretName: codetogether-tls
  rules:
    - host: "codetogether.local"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: my-release-codetogether
                port:
                  number: 443
---
# Source: codetogether/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-codetogether-test-connection"
  labels:
    helm.sh/chart: codetogether-1.4.11
    app.kubernetes.io/name: codetogether
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2023.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['my-release-codetogether:443']
  restartPolicy: Never
